# A1349

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  s4_performance_ideas.md
benchmarks/: Makefile  aggregate.py  collect.py  compare_levels.py  compose.py  figure_combined.py  pyproject.toml  run_suite.py  sched_latency.bpf.c  sched_latency.c  visualize.py
benchmarks/workloads/: Makefile  fairness_harness.c
events/0212/: main.tex
events/0904/: main.tex
events/2104/: main.tex
events/2904/: main.tex
events/2904/res/: example.c
events/article/: article.tex
events/final/: main.tex
events/inshort/: inshort.tex
events/mmp/: main.tex
impl/s3/: Makefile
impl/s3+/: Makefile
impl/s3+/scheds/: README.md  sync-to-kernel.sh
impl/s3+/scheds/c/: Makefile  common.h  meson.build  scx_eevdf.bpf.c  scx_eevdf.c
impl/s3+/scheds/vmlinux/: vmlinux.h
impl/s3/scheds/: README.md
impl/s3/scheds/c/: Makefile  meson.build  scx_eevdf.bpf.c  scx_eevdf.c
impl/s4/: Makefile  hetero_scheduler_model.md  lib
impl/s4/scheds/: include  vmlinux
impl/s4/scheds/c/: Makefile  scx_A1349.bpf.c  scx_A1349.c  scx_auction.bpf.c  scx_auction.c
impl/scx_A1349/: Makefile  architecture.md  handlers.md
impl/scx_A1349/lib/: pmu.bpf.c
impl/scx_A1349/scheds/c/: Makefile  scx_A1349.bpf.c  scx_A1349.c
models/: ML_s5.md  VCG_s4.md  VCG_s4_impl.md  eevdf.md  eevdf_s3.md
tasks/: scx_diagram.md  vcg_overhead_slide.md
theory/s1/: main.tex  sched.tex
theory/s2/: main.tex
theory/s3/: main.tex
theory/s4/: main.tex
theory/s4-mini/: main.tex
(+2 files in other folders)
